finished transferring everything over

--- a/content/bitdelta.html
+++ b/content/bitdelta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>ArchiGen</title>
+    <title>Activation Aware BitDelta</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -42,34 +42,33 @@
     <div id="main">
         <section id="project" class="two">
             <div class="container">
-                <!-- Left column for GitHub, video, and presentation buttons -->
+                <!-- Left column for paper and presentation buttons -->
                 <div class="left-column">
-                    <a href="https://github.com/shrika-eddula/archigen" class="button">GitHub Repo</a>
-                    <a href="https://youtu.be/kYeRlDDyd70" class="button">Video</a>
-                    <a href="images/archigenPresentation.pdf" class="button">Presentation</a>
+                    <a href="ActAwareBitDelta.pdf" class="button">Paper</a>
+                    <a href="BitDeltaPoster.pdf" class="button">Poster</a>
                 </div>
                 <div class="right-column">
                     <header>
-                        <h2>ArchiGen</h2>
-                        <!-- Minimized vertical distance between title and description -->
-                        <p>AI generated architectural floor plans via stable diffusion</p>
-                        <!-- Skills buttons right below the description -->
+                        <h2>Activation Aware BitDelta</h2>
+                        <p>A novel approach to neural network quantization that considers activation patterns for more efficient compression.</p>
                         <div class="skills">
-                            <button class="skill-button">Stable Diffusion</button>
-                            <button class="skill-button">GANs</button>
-                            <button class="skill-button">Generative AI</button>
-                            <button class="skill-button">Machine Learning</button>
+                            <button class="skill-button">Neural Networks</button>
+                            <button class="skill-button">Quantization</button>
+                            <button class="skill-button">Model Compression</button>
+                            <button class="skill-button">PyTorch</button>
+                            <button class="skill-button">Deep Learning</button>
                         </div>
                     </header>
                     <div class="project-details">
-                        <!-- Video Placeholder -->
-                        <div class="video">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/kYeRlDDyd70" frameborder="0" allowfullscreen></iframe>
+                        <!-- Poster Image instead of Video -->
+                        <div class="poster-image">
+                            <img src="BitDeltaPoster.pdf" alt="BitDelta Poster" style="width: 100%; max-width: 800px;" />
                         </div>
-                        <p>ArchiGen gives users the power to specify what general features they need in an architectural 
-                            floor plan (e.g, number of rooms, type of building) and generates multiple potential 
-                            layouts that meet the constraints. Our product breaks the bounds of creativity by considering 
-                            arrangements that would not immediately have been thought of by the human mind.
+                        <p>
+                            Activation Aware BitDelta is a cutting-edge approach to neural network quantization that takes into account the activation patterns of neurons during the compression process. This method achieves superior compression rates while maintaining model accuracy by intelligently allocating bits based on the importance of different activation patterns in the network.
+                        </p>
+                        <p>
+                            The project introduces a novel algorithm that analyzes neuron activation frequencies and their impact on model performance, using this information to guide the quantization process. This results in more efficient compression compared to traditional methods that treat all neurons equally.
                         </p>
                     </div>
                 </div>
