--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>minimalist-modern-display</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Shrika Eddula</title>
+    <meta name="description" content="Personal website of Shrika Eddula - Projects, Research, and Resume" />
+    <meta name="author" content="Shrika Eddula" />
     <meta property="og:image" content="/og-image.png" />
-    <base href="/" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
