--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shrika Eddula</title>
+    <title>Shrika Eddula | Portfolio</title>
     <meta name="description" content="Personal website of Shrika Eddula - Projects, Research, and Resume" />
     <meta name="author" content="Shrika Eddula" />
+    <meta property="og:title" content="Shrika Eddula | Portfolio" />
+    <meta property="og:description" content="Personal website of Shrika Eddula - Projects, Research, and Resume" />
     <meta property="og:image" content="/og-image.png" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
