--- a/index.html
+++ b/index.html
@@ -10,17 +10,9 @@
     <meta property="og:description" content="Personal website of Shrika Eddula - Projects, Research, and Resume" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <script type="module" src="http://localhost:8080/@vite/client"></script>
-    <script type="module">
-      import RefreshRuntime from 'http://localhost:8080/@react-refresh'
-      RefreshRuntime.injectIntoGlobalHook(window)
-      window.$RefreshReg$ = () => {}
-      window.$RefreshSig$ = () => (type) => type
-      window.__vite_plugin_react_preamble_installed__ = true
-    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="http://localhost:8080/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
