updated icon, name, and socials links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shrika Eddula | Portfolio</title>
+    <title>Shrika Eddula</title>
     <meta name="description" content="Personal website of Shrika Eddula - Projects, Research, and Resume" />
     <meta name="author" content="Shrika Eddula" />
     <meta property="og:title" content="Shrika Eddula | Portfolio" />
